gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  namespace: gateway-api
  name: gke-l7-regional-external-managed
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
