http-echo-no-custom-header.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: http-echo-no-custom-header
  name: http-echo-no-custom-header
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo-no-custom-header
  strategy: {}
  template:
    metadata:
      labels:
        app: http-echo-no-custom-header
    spec:
      containers:
      - image: mendhak/http-https-echo
        name: http-echo-no-custom-header
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: http-echo-no-custom-header
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{"name": "http-echo-no-custom-header"}}}'
  name: http-echo-no-custom-header
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo-no-custom-header
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: default
  name: http-echo-no-custom-header
spec:
  parentRefs:
  - kind: Gateway
    name: gke-l7-regional-external-managed
    namespace: gateway-api
  hostnames:
  - http-echo-no-custom-header.example.com
  rules:
    - backendRefs:
      - name: http-echo-no-custom-header
        namespace: default
        port: 80
